internal/xds/translator/testdata/out/xds-ir-sublinear/ratelimit.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            example:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: example
                  name: second-route
                  route:
                    cluster: second-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: second-route
                          descriptorValue: second-route
                      - requestHeaders:
                          descriptorKey: rule-0-match-0
                          headerName: x-user-id
                    upgradeConfigs:
                    - upgradeType: websocket
            foo/bar:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      path: foo/bar
                    name: first-route
                    route:
                      cluster: first-route-dest
                      rateLimits:
                      - actions:
                        - genericKey:
                            descriptorKey: first-route
                            descriptorValue: first-route
                        - headerValueMatch:
                            descriptorKey: rule-0-match-0
                            descriptorValue: rule-0-match-0
                            expectMatch: true
                            headers:
                            - name: x-user-id
                              stringMatch:
                                exact: one
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      path: foo/bar
                    name: req-and-resp-cost
                    route:
                      cluster: first-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
                    typedPerFilterConfig:
                      envoy.filters.http.ratelimit:
                        '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
                        rateLimits:
                        - actions:
                          - genericKey:
                              descriptorKey: req-and-resp-cost
                              descriptorValue: req-and-resp-cost
                          - headerValueMatch:
                              descriptorKey: rule-0-match-0
                              descriptorValue: rule-0-match-0
                              expectMatch: true
                              headers:
                              - name: x-user-id
                                stringMatch:
                                  exact: one
                          hitsAddend:
                            number: "12345"
                        - actions:
                          - genericKey:
                              descriptorKey: req-and-resp-cost
                              descriptorValue: req-and-resp-cost
                          - headerValueMatch:
                              descriptorKey: rule-0-match-0
                              descriptorValue: rule-0-match-0
                              expectMatch: true
                              headers:
                              - name: x-user-id
                                stringMatch:
                                  exact: one
                          applyOnStreamDone: true
                          hitsAddend:
                            format: '%DYNAMIC_METADATA(something.com:key)%'
            foo/bar/login:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      path: foo/bar/login
                    name: fourth-route
                    route:
                      cluster: fourth-route-dest
                      rateLimits:
                      - actions:
                        - genericKey:
                            descriptorKey: fourth-route
                            descriptorValue: fourth-route
                        - headerValueMatch:
                            descriptorKey: rule-0-match-0
                            descriptorValue: rule-0-match-0
                            expectMatch: false
                            headers:
                            - name: x-org-id
                              stringMatch:
                                exact: admin
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      path: foo/bar/login
                    name: res-cost
                    route:
                      cluster: fourth-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
                    typedPerFilterConfig:
                      envoy.filters.http.ratelimit:
                        '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
                        rateLimits:
                        - actions:
                          - genericKey:
                              descriptorKey: res-cost
                              descriptorValue: res-cost
                          - headerValueMatch:
                              descriptorKey: rule-0-match-0
                              descriptorValue: rule-0-match-0
                              expectMatch: false
                              headers:
                              - name: x-org-id
                                stringMatch:
                                  exact: admin
                        - actions:
                          - genericKey:
                              descriptorKey: res-cost
                              descriptorValue: res-cost
                          - headerValueMatch:
                              descriptorKey: rule-0-match-0
                              descriptorValue: rule-0-match-0
                              expectMatch: false
                              headers:
                              - name: x-org-id
                                stringMatch:
                                  exact: admin
                          applyOnStreamDone: true
                          hitsAddend:
                            format: '%DYNAMIC_METADATA(something.com:key)%'
            test:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      path: test
                    name: third-route
                    route:
                      cluster: third-route-dest
                      rateLimits:
                      - actions:
                        - genericKey:
                            descriptorKey: third-route
                            descriptorValue: third-route
                        - genericKey:
                            descriptorKey: rule-0-match--1
                            descriptorValue: rule-0-match--1
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      path: test
                    name: req-cost
                    route:
                      cluster: third-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
                    typedPerFilterConfig:
                      envoy.filters.http.ratelimit:
                        '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
                        rateLimits:
                        - actions:
                          - genericKey:
                              descriptorKey: req-cost
                              descriptorValue: req-cost
                          - genericKey:
                              descriptorKey: rule-0-match--1
                              descriptorValue: rule-0-match--1
                          hitsAddend:
                            number: "12345"
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
